--- a/index.html
+++ b/index.html
@@ -19,13 +19,7 @@
       <nav class="navbar">
         <a class="brand" href="#topPage">DARIA ONOFREI</a>
         <ul class="menu">
-
-          <li><a href="#aboutMe">about</a></li>
-
-          <li><a href="#topPage" class="scroll">DARIA ONOFREI</a></li>
           <li><a href="#aboutMe" class="scroll">about</a></li>
-          <li><a href="#skills" class="scroll">my skills</a></li>
-
           <li><a href="#myWorks">my works</a></li>
           <li><a href="#skills">my skills</a></li>
           <li><a href="#contacts">contact</a></li>
@@ -47,7 +41,32 @@
     </div>
   </div>
 
+  <section id="topPage">
+    <div class="container">
+      <div class="box">
+        <div class="content">
+          <div id="top"></div>
+          <div id="bottom"></div>
+          <img class="my-photo" src="img/profile_photo.png" alt="photo">
+        </div>
+        <h1 class="bounceInLeft">Hi,<br>
+          I am Daria Onofrei,<br>
+          frontend developer</h1>
+      </div>
+    </div>
 
+  </section>
+  <section id="aboutMe">
+    <div class="container text-center">
+      <h2>about me</h2>
+      <div class="about_describe violet-block">
+        <p>I'm a Front-End Developer</p>
+        <p>I'm skilled at translating designer's wireframes and sketches into the environment for everything that users see and touch: content, layout, and interaction.</p>
+        <p>I love problem solving & fast animation</p>
+        <p>I get excited about how technology influences human's perception and interection in the world</p>
+      </div>
+    </div>
+  </section>
 
 </main>
 
