--- a/index.html
+++ b/index.html
@@ -67,6 +67,93 @@
       </div>
     </div>
   </section>
+  <section id="myWorks">
+    <div class="container text-center">
+      <h2>my works</h2>
+      <ul class="row">
+        <li class="col-3 padding-0 work">
+          <figure class="work_image-container">
+            <a class="work_link" href="https://fennecfaktory.com/" target="_blank">
+              <img src="img/fennecfaktory-sm.jpg" alt="" class="work-image">
+              <figcaption class="figcaption">
+                <h4 class="mt-15 mb-15">FennecFaktory:</h4>
+                <p>HTML, CSS, jQuery, Materializecss</p>
+
+              </figcaption>
+            </a>
+
+          </figure>
+        </li>
+        <li class="col-3 padding-0 work">
+          <figure class="work_image-container">
+            <a class="work_link" href="https://www.sasha-me.com/" target="_blank">
+              <img src="img/sasha-me.jpg" alt="" class="sasha-me">
+              <figcaption class="figcaption">
+                <h4 class="mt-15 mb-15">Sasha Me:</h4>
+                <p>HTML, CSS, Webflow</p>
+
+              </figcaption>
+            </a>
+
+          </figure>
+        </li>
+        <li class="col-3 padding-0 work">
+          <figure class="work_image-container">
+            <a class="work_link" href="#" target="_blank">
+              <img src="img/all-floors.jpg" alt="" class="all floors">
+              <figcaption class="figcaption">
+                <h4 class="mt-15 mb-15">All Floors:</h4>
+                <small>Design & FrontEnd</small>
+                <p>Adobe XD, HTML, SCSS, Vue.js, Webpack</p>
+
+              </figcaption>
+            </a>
+
+          </figure>
+        </li>
+        <li class="col-3 padding-0 work">
+          <figure class="work_image-container">
+            <a class="work_link" href="http://www.gomobileiv.com/" target="_blank">
+              <img src="img/iv-business.jpg" alt="" class="go mobileiv">
+              <figcaption class="figcaption">
+                <h4 class="mt-15 mb-15">Mobile IV</h4>
+                <small>Design & FrontEnd</small>
+                <p>Figma, HTML, CSS, JQuery</p>
+
+              </figcaption>
+            </a>
+
+          </figure>
+        </li>
+        <li class="col-3 padding-0 work">
+          <figure class="work_image-container">
+            <a class="work_link" href="https://github.com/OnofreiDaria/bestgeek" target="_blank">
+              <img src="img/geek.jpg" alt="" class="best geek">
+              <figcaption class="figcaption">
+                <h4 class="mt-15 mb-15">Best Geek</h4>
+                <p>HTML, SCSS, JQuery, Gulp</p>
+
+              </figcaption>
+            </a>
+
+          </figure>
+        </li>
+        <li class="col-3 padding-0 work">
+          <figure class="work_image-container">
+            <a class="work_link" href="http://accent-service.md/" target="_blank">
+              <img src="img/accent.jpg" alt="" class="accent service">
+              <figcaption class="figcaption">
+                <h4 class="mt-15 mb-15">Accent Service</h4>
+                <p>HTML, SCSS, JQuery, Gulp</p>
+              </figcaption>
+            </a>
+
+          </figure>
+        </li>
+      </ul>
+    </div>
+
+  </section>
 
 </main>
 
