--- a/index.html
+++ b/index.html
@@ -154,6 +154,34 @@
     </div>
 
   </section>
+  <section id="skills">
+    <div class="container text-center">
+      <h2>my skills</h2>
+      <div class="violet-block">
+        <div class="row">
+          <div class="col-2">
+            <ul class="gradient">
+              <li>HTML/ HTML5/ Pug</li>
+              <li>CSS/ CSS3/ SCSS</li>
+              <li>JavaScript/ jQuery/ jQueryUI</li>
+              <li>Vue.js</li>
+              <li>Adaptive layout</li>
+              <li>Cross-Browser</li>
+            </ul>
+          </div>
+          <div class="col-2">
+            <ul class="gradient">
+              <li>PhotoShop/ Adobe Illustrator/ Figma/ Adobe XD</li>
+              <li>Git</li>
+              <li>Bootstrap/ Foundation/ Materializecss</li>
+              <li>Gulp/ Webpack</li>
+              <li>Web Design</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
 
 </main>
 
