--- a/index.html
+++ b/index.html
@@ -182,6 +182,47 @@
       </div>
     </div>
   </section>
+  <section id="contacts">
+    <div class="container text-center">
+      <h2>contact</h2>
+      <div class="violet-block">
+        <form action="">
+          <div class="row">
+            <div class="col-2">
+              <p>
+                <label for="name">Name</label>
+              </p>
+              <input id="name" type="text">
+
+            </div>
+            <div class="col-2">
+              <p>
+                <label for="email">Email</label>
+              </p>
+              <input id="email" type="email">
+
+            </div>
+
+          </div>
+          <div class="row">
+            <div class="col">
+              <p>
+                <label for="msg">Message</label>
+              </p>
+
+              <textarea id="msg" name="" cols="30" rows="2"></textarea>
+            </div>
+
+
+          </div>
+          <div class="sim-button btn">
+            <span>Send</span>
+          </div>
+        </form>
+      </div>
+    </div>
+
+  </section>
 
 </main>
 
