--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
         </li>
         <li class="col-3 padding-0 work">
           <figure class="work_image-container">
-            <a class="work_link" href="https://github.com/OnofreiDaria/bestgeek" target="_blank">
+            <a class="work_link" href="https://onofreidaria.github.io/bestgeek/" target="_blank">
               <img src="img/geek.jpg" alt="" class="best geek">
               <figcaption class="figcaption">
                 <h4 class="mt-15 mb-15">Best Geek</h4>
