--- a/index.html
+++ b/index.html
@@ -77,7 +77,8 @@
               <img src="img/fennecfaktory-sm.jpg" alt="" class="work-image">
               <figcaption class="figcaption">
                 <h4 class="mt-15 mb-15">FennecFaktory:</h4>
-                <p>HTML, CSS, jQuery, Materializecss</p>
+                <small>FrontEnd</small>
+                <p>HTML, CSS, jQuery, Materializecss / Vue.js, Vue-Bootstrap</p>
 
               </figcaption>
             </a>
@@ -90,6 +91,7 @@
               <img src="img/sasha-me.jpg" alt="" class="sasha-me">
               <figcaption class="figcaption">
                 <h4 class="mt-15 mb-15">Sasha Me:</h4>
+                <small>FrontEnd</small>
                 <p>HTML, CSS, Webflow</p>
 
               </figcaption>
@@ -104,7 +106,7 @@
               <figcaption class="figcaption">
                 <h4 class="mt-15 mb-15">All Floors:</h4>
                 <small>Design & FrontEnd</small>
-                <p>Adobe XD, HTML, SCSS, Vue.js, Webpack</p>
+                <p>Adobe XD, HTML, SCSS, Vue.js, Vue-Bootstrap, Webpack</p>
 
               </figcaption>
             </a>
@@ -131,6 +133,7 @@
               <img src="img/geek.jpg" alt="" class="best geek">
               <figcaption class="figcaption">
                 <h4 class="mt-15 mb-15">Best Geek</h4>
+                <small>FrontEnd</small>
                 <p>HTML, SCSS, JQuery, Gulp</p>
 
               </figcaption>
@@ -144,7 +147,34 @@
               <img src="img/accent.jpg" alt="" class="accent service">
               <figcaption class="figcaption">
                 <h4 class="mt-15 mb-15">Accent Service</h4>
+                <small>FrontEnd</small>
                 <p>HTML, SCSS, JQuery, Gulp</p>
+              </figcaption>
+            </a>
+
+          </figure>
+        </li>
+        <li class="col-3 padding-0 work">
+          <figure class="work_image-container">
+            <a class="work_link" href="https://womxn-in-games.webflow.io/" target="_blank">
+              <img src="img/womnx.png" alt="" class="womnx">
+              <figcaption class="figcaption">
+                <h4 class="mt-15 mb-15">WOMNX IN GAMES</h4>
+                <small>FrontEnd</small>
+                <p>HTML, CSS, Webflow</p>
+              </figcaption>
+            </a>
+
+          </figure>
+        </li>
+        <li class="col-3 padding-0 work">
+          <figure class="work_image-container">
+            <a class="work_link" href="http://95.179.179.35/" target="_blank">
+              <img src="img/pmu.jpg" alt="" class="pmu">
+              <figcaption class="figcaption">
+                <h4 class="mt-15 mb-15">PMU</h4>
+                <small>Design & FrontEnd</small>
+                <p>HTML, CSS, Vue.js, Vue-Bootstrap</p>
               </figcaption>
             </a>
 
