--- a/index.html
+++ b/index.html
@@ -73,13 +73,13 @@
       <ul class="row">
         <li class="col-3 padding-0 work">
           <figure class="work_image-container">
-            <a class="work_link" href="https://fennecfaktory.com/" target="_blank">
+            <a class="work_link" href="https://fennecandfinch.com/" target="_blank">
               <img src="img/fennecfaktory-sm.jpg" alt="" class="work-image">
               <figcaption class="figcaption">
                 <h4 class="mt-15 mb-15">FennecFaktory:</h4>
                 <small>FrontEnd</small>
                 <p>HTML, CSS, jQuery, Materializecss / Vue.js, Vue-Bootstrap</p>
-
+                <p class="text-uppercase color-pink">Will be soon</p>
               </figcaption>
             </a>
 
@@ -101,13 +101,13 @@
         </li>
         <li class="col-3 padding-0 work">
           <figure class="work_image-container">
-            <a class="work_link" href="#" target="_blank">
+            <a class="work_link">
               <img src="img/all-floors.jpg" alt="" class="all floors">
               <figcaption class="figcaption">
                 <h4 class="mt-15 mb-15">All Floors:</h4>
                 <small>Design & FrontEnd</small>
                 <p>Adobe XD, HTML, SCSS, Vue.js, Vue-Bootstrap, Webpack</p>
-
+                <p class="text-uppercase color-pink">Will be soon</p>
               </figcaption>
             </a>
 
@@ -175,6 +175,19 @@
                 <h4 class="mt-15 mb-15">PMU</h4>
                 <small>Design & FrontEnd</small>
                 <p>HTML, CSS, Vue.js, Vue-Bootstrap</p>
+              </figcaption>
+            </a>
+
+          </figure>
+        </li>
+        <li class="col-3 padding-0 work">
+          <figure class="work_image-container">
+            <a class="work_link" href="https://onofreidaria.github.io/cotea/" target="_blank">
+              <img src="img/cotea.jpg" alt="" class="pmu">
+              <figcaption class="figcaption">
+                <h4 class="mt-15 mb-15">COTEA</h4>
+                <small>FrontEnd</small>
+                <p>HTML, CSS, JQuery, Gulp</p>
               </figcaption>
             </a>
 
