--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                 <h4 class="mt-15 mb-15">FennecFaktory:</h4>
                 <small>FrontEnd</small>
                 <p>HTML, CSS, jQuery, Materializecss / Vue.js, Vue-Bootstrap</p>
-                <p class="text-uppercase color-pink">Will be soon</p>
+                <p class="text-uppercase color-pink">Coming Soon</p>
               </figcaption>
             </a>
 
@@ -107,7 +107,7 @@
                 <h4 class="mt-15 mb-15">All Floors:</h4>
                 <small>Design & FrontEnd</small>
                 <p>Adobe XD, HTML, SCSS, Vue.js, Vue-Bootstrap, Webpack</p>
-                <p class="text-uppercase color-pink">Will be soon</p>
+                <p class="text-uppercase color-pink">Coming Soon</p>
               </figcaption>
             </a>
 
