--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
               <li>HTML/ HTML5/ Pug</li>
               <li>CSS/ CSS3/ SCSS</li>
               <li>JavaScript/ jQuery/ jQueryUI</li>
-              <li>Vue.js</li>
+              <li>Vue.js / Vuex</li>
               <li>Adaptive layout</li>
               <li>Cross-Browser</li>
             </ul>
