added new website

--- a/index.html
+++ b/index.html
@@ -193,6 +193,19 @@
 
           </figure>
         </li>
+        <li class="col-3 padding-0 work">
+          <figure class="work_image-container">
+            <a class="work_link" href="http://9am.news/" target="_blank">
+              <img src="img/9am.jpg" alt="" class="9am agency">
+              <figcaption class="figcaption">
+                <h4 class="mt-15 mb-15">9 am agency</h4>
+                <small>FrontEnd</small>
+                <p>HTML, CSS, Bootstrap 4</p>
+              </figcaption>
+            </a>
+
+          </figure>
+        </li>
       </ul>
     </div>
 
