--- a/index.html
+++ b/index.html
@@ -35,6 +35,11 @@
               <i class="fab fa-github"></i>
             </a>
           </li>
+          <li>
+            <a href="https://www.upwork.com/freelancers/~01794732cba2f2c142" target="_blank">
+              <img src="img/upwork-icon.svg" alt="">
+            </a>
+          </li>
         </ul>
 
       </nav>
