--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
   <link href="https://fonts.googleapis.com/css?family=Quicksand&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
   <link rel="stylesheet" href="css/styles.css">
-
   <title>Daria Onofrei</title>
 
 </head>
@@ -22,7 +21,7 @@
           <li><a href="#aboutMe" class="scroll">about</a></li>
           <li><a href="#myWorks">my works</a></li>
           <li><a href="#skills">my skills</a></li>
-          <li><a href="#contacts">contact</a></li>
+          <li><a href="#contacts">contacts</a></li>
         </ul>
         <ul class="menu right-menu">
           <li>
@@ -37,7 +36,7 @@
           </li>
           <li>
             <a href="https://www.upwork.com/freelancers/~01794732cba2f2c142" target="_blank">
-              <img src="img/upwork-icon.svg" alt="">
+              <img src="img/upwork-icon.svg" alt="upwork">
             </a>
           </li>
         </ul>
@@ -245,41 +244,53 @@
   </section>
   <section id="contacts">
     <div class="container text-center">
-      <h2>contact</h2>
+      <h2>contacts</h2>
       <div class="violet-block">
-        <form action="">
-          <div class="row">
-            <div class="col-2">
-              <p>
-                <label for="name">Name</label>
-              </p>
-              <input id="name" type="text">
+        <a href="mailto:onofrei.daria.do@gmail.com" class="sim-button btn" target="_blank">
+            <span>Send Email</span>
+          <i class="fas fa-envelope-square"></i>
+        </a>
+        <a href="https://www.linkedin.com/in/daria-onofrei/" class="sim-button btn" target="_blank">
+          <span>LinkedIn</span>
+          <i class="fab fa-linkedin"></i>
+        </a>
+        <a href="https://www.upwork.com/freelancers/~01794732cba2f2c142" class="sim-button btn" target="_blank">
+          <span>Upwork</span>
+          <img src="img/upwork-icon.svg" alt="upwork">
+        </a>
+<!--        <form action="mail.php" method="POST">-->
+<!--          <div class="row">-->
+<!--            <div class="col-2">-->
+<!--              <p>-->
+<!--                <label for="name">Name</label>-->
+<!--              </p>-->
+<!--              <input id="name" type="text" name="user_name">-->
 
-            </div>
-            <div class="col-2">
-              <p>
-                <label for="email">Email</label>
-              </p>
-              <input id="email" type="email">
+<!--            </div>-->
+<!--            <div class="col-2">-->
+<!--              <p>-->
+<!--                <label for="email">Email</label>-->
+<!--              </p>-->
+<!--              <input id="email" type="email" name="user_email">-->
 
-            </div>
+<!--            </div>-->
 
-          </div>
-          <div class="row">
-            <div class="col">
-              <p>
-                <label for="msg">Message</label>
-              </p>
+<!--          </div>-->
+<!--          <div class="row">-->
+<!--            <div class="col">-->
+<!--              <p>-->
+<!--                <label for="msg">Message</label>-->
+<!--              </p>-->
 
-              <textarea id="msg" name="" cols="30" rows="2"></textarea>
-            </div>
+<!--              <textarea id="msg" name="" cols="30" rows="2" name="user_message"></textarea>-->
+<!--            </div>-->
 
 
-          </div>
-          <div class="sim-button btn">
-            <span>Send</span>
-          </div>
-        </form>
+<!--          </div>-->
+<!--          <button class="sim-button btn" type="submit">-->
+<!--            <span>Send</span>-->
+<!--          </button>-->
+<!--        </form>-->
       </div>
     </div>
 
@@ -288,6 +299,7 @@
 </main>
 
 <script src="js/main.js"></script>
+
 
 </body>
 </html>
