--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
           <span>Upwork</span>
           <img src="img/upwork-icon.svg" alt="upwork">
         </a>
-<!--        <form action="mail.php" method="POST">-->
+<!--        <form  method="POST">-->
 <!--          <div class="row">-->
 <!--            <div class="col-2">-->
 <!--              <p>-->
