--- a/index.html
+++ b/index.html
@@ -171,19 +171,19 @@
 
           </figure>
         </li>
-        <li class="col-3 padding-0 work">
-          <figure class="work_image-container">
-            <a class="work_link" href="http://95.179.179.35/" target="_blank">
-              <img src="img/pmu.jpg" alt="" class="pmu">
-              <figcaption class="figcaption">
-                <h4 class="mt-15 mb-15">PMU</h4>
-                <small>Design & FrontEnd</small>
-                <p>HTML, CSS, Vue.js, Vue-Bootstrap</p>
-              </figcaption>
-            </a>
+<!--        <li class="col-3 padding-0 work">-->
+<!--          <figure class="work_image-container">-->
+<!--            <a class="work_link" href="http://95.179.179.35/" target="_blank">-->
+<!--              <img src="img/pmu.jpg" alt="" class="pmu">-->
+<!--              <figcaption class="figcaption">-->
+<!--                <h4 class="mt-15 mb-15">PMU</h4>-->
+<!--                <small>Design & FrontEnd</small>-->
+<!--                <p>HTML, CSS, Vue.js, Vue-Bootstrap</p>-->
+<!--              </figcaption>-->
+<!--            </a>-->
 
-          </figure>
-        </li>
+<!--          </figure>-->
+<!--        </li>-->
         <li class="col-3 padding-0 work">
           <figure class="work_image-container">
             <a class="work_link" href="https://onofreidaria.github.io/cotea/" target="_blank">
