--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
         </li>
         <li class="col-3 padding-0 work">
           <figure class="work_image-container">
-            <a class="work_link" href="http://9am.news/" target="_blank">
+            <a class="work_link" href="https://9am.agency/" target="_blank">
               <img src="img/9am.jpg" alt="" class="9am agency">
               <figcaption class="figcaption">
                 <h4 class="mt-15 mb-15">9 am agency</h4>
