--- a/index.html
+++ b/index.html
@@ -210,6 +210,19 @@
 
           </figure>
         </li>
+        <li class="col-3 padding-0 work">
+          <figure class="work_image-container">
+            <a class="work_link" href="https://9sec.news/" target="_blank">
+              <img src="img/news.jpg" alt="" class="9sec news">
+              <figcaption class="figcaption">
+                <h4 class="mt-15 mb-15">9sec news</h4>
+                <small>FrontEnd</small>
+                <p>HTML, CSS, Bootstrap 4, Grid CSS, jQuery</p>
+              </figcaption>
+            </a>
+
+          </figure>
+        </li>
       </ul>
     </div>
 
