--- a/index.html
+++ b/index.html
@@ -223,6 +223,19 @@
 
           </figure>
         </li>
+        <li class="col-3 padding-0 work">
+          <figure class="work_image-container">
+            <a class="work_link" href="https://coffee-fabrik.webflow.io/" target="_blank">
+              <img src="img/coffee.jpg" alt="" class="9sec news">
+              <figcaption class="figcaption">
+                <h4 class="mt-15 mb-15">Coffee shop</h4>
+                <small>FrontEnd</small>
+                <p>HTML, CSS, Webflow</p>
+              </figcaption>
+            </a>
+
+          </figure>
+        </li>
       </ul>
     </div>
 
