added new website

--- a/index.html
+++ b/index.html
@@ -225,8 +225,22 @@
         </li>
         <li class="col-3 padding-0 work">
           <figure class="work_image-container">
+            <a class="work_link" href="https://fabian-ziegler-6cbae3f981745ed070029256.webflow.io/" target="_blank">
+              <img src="img/fz.jpg" alt="fabian ziegler">
+              <figcaption class="figcaption">
+                <h4 class="mt-15 mb-15">Fabian Ziegler portfolio</h4>
+                <small>FrontEnd</small>
+                <p>HTML, CSS, Webflow</p>
+              </figcaption>
+            </a>
+
+          </figure>
+        </li>
+        <li class="col-3 padding-0 work">
+          <figure class="work_image-container">
             <a class="work_link" href="https://coffee-fabrik.webflow.io/" target="_blank">
-              <img src="img/coffee.jpg" alt="" class="9sec news">
+              <img src="img/coffee.jpg" alt="" class="9sec news"><img src="img/profile_photo.png" height="543"
+                                                                      width="484"/>
               <figcaption class="figcaption">
                 <h4 class="mt-15 mb-15">Coffee shop</h4>
                 <small>FrontEnd</small>
